--- a/arch/x86/configs/vbox_defconfig
+++ b/arch/x86/configs/vbox_defconfig
@@ -3029,6 +3029,7 @@ CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
+CONFIG_TRACER_MAX_TRACE=y
 CONFIG_RING_BUFFER=y
 CONFIG_FTRACE_NMI_ENTER=y
 CONFIG_EVENT_TRACING=y
@@ -3041,7 +3042,7 @@ CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
 # CONFIG_IRQSOFF_TRACER is not set
 # CONFIG_PREEMPT_TRACER is not set
-# CONFIG_SCHED_TRACER is not set
+CONFIG_SCHED_TRACER=y
 CONFIG_FTRACE_SYSCALLS=y
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
