--- a/arch/x86/configs/vbox_defconfig
+++ b/arch/x86/configs/vbox_defconfig
@@ -875,7 +875,7 @@ CONFIG_NET_SCHED=y
 # Queueing/Scheduling
 #
 # CONFIG_NET_SCH_CBQ is not set
-# CONFIG_NET_SCH_HTB is not set
+CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_HFSC is not set
 # CONFIG_NET_SCH_PRIO is not set
 # CONFIG_NET_SCH_MULTIQ is not set
@@ -902,7 +902,7 @@ CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
-# CONFIG_NET_CLS_U32 is not set
+CONFIG_NET_CLS_U32=y
 # CONFIG_NET_CLS_RSVP is not set
 # CONFIG_NET_CLS_RSVP6 is not set
 # CONFIG_NET_CLS_FLOW is not set
@@ -910,7 +910,7 @@ CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
 # CONFIG_NET_EMATCH_CMP is not set
 # CONFIG_NET_EMATCH_NBYTE is not set
-# CONFIG_NET_EMATCH_U32 is not set
+CONFIG_NET_EMATCH_U32=y
 # CONFIG_NET_EMATCH_META is not set
 # CONFIG_NET_EMATCH_TEXT is not set
 CONFIG_NET_CLS_ACT=y
